gitconfig: Add compression and pack configs

--- a/.gitconfig
+++ b/.gitconfig
@@ -112,6 +112,10 @@
 	trustctime = false
 	editor = vim
 
+	compression = -1
+	packedGitLimit = 512m
+	packedGitWindowSize = 512m
+
 [color]
 
 	# Use colors in Git commands that are capable of colored output when
@@ -151,6 +155,11 @@
 
 	# Include summaries of merged commits in newly created merge commit messages
 	log = true
+
+[pack]
+	deltaCacheSize = 2047m
+	packSizeLimit = 2047m
+	windowMemory = 2047m
 
 [push]
 	# change to maching for machines with older versions of git 1.x.x
