gitconfig: Customize for myself

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,9 @@
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
 
 	# View the current working tree status using the short format
-	s = status -s
+	s = status -sb
+	st = status -sb
+	stat = status -sb
 
 	# Show the diff between the latest commit and the current state
 	d = !"git diff-index --quiet HEAD -- || clear; git --no-pager diff --patch-with-stat"
@@ -15,23 +17,42 @@
 	# Pull in remote changes for the current repository and all its submodules
 	p = !"git pull; git submodule foreach git pull origin master"
 
-	# Checkout a pull request from origin (of a github repository)
-	pr = !"pr() { git fetch origin pull/$1/head:pr-$1; git checkout pr-$1; }; pr"
+	## Checkout a pull request from origin (of a github repository)
+	# pr = !"pr() { git fetch origin pull/$1/head:pr-$1; git checkout pr-$1; }; pr"
+
+	# Pull rebase
+	pr = !"git pull --rebase; git submodule foreach git pull --rebase"
 
 	# Clone a repository including all submodules
 	c = clone --recursive
 
+	# Add
+	ap = add -p
+
 	# Commit all changes
-	ca = !git add -A && git commit -av
+	ca = !git add -A && git commit -avs
+
+	# Commit
+	ci = commit -s
+
+	# Cherry-Pick
+	cherrypick = cherry-pick -x
+	cherryp = cherry-pick -x
+	cp = cherry-pick -x
 
 	# Switch to a branch, creating it if necessary
 	go = "!f() { git checkout -b \"$1\" 2> /dev/null || git checkout \"$1\"; }; f"
+
+	# Create a branch and switch to it
+	cb = checkout -b
 
 	# Color graph log view
 	graph = log --graph --color --pretty=format:"%C(yellow)%H%C(green)%d%C(reset)%n%x20%cd%n%x20%cn%x20(%ce)%n%x20%s%n"
 
 	# Show verbose output about tags, branches or remotes
 	tags = tag -l
+	b = branch
+	ba = branch -a
 	branches = branch -a
 	remotes = remote -v
 
@@ -43,6 +64,7 @@
 
 	# Interactive rebase with the given number of latest commits
 	reb = "!r() { git rebase -i HEAD~$1; }; r"
+	ri = rebase -i
 
 	# Find branches containing commit
 	fb = "!f() { git branch -a --contains $1; }; f"
@@ -77,7 +99,8 @@
 
 	# from seth vargo https://gist.github.com/sethvargo/6b2f7b592853381690bfe3bd00947e8f
 	unreleased = "!f() { git fetch --tags && git diff $(git tag | tail -n 1); }; f"
-	up = !git pull origin master && git remote prune origin && git submodule update --init --recursive
+	# up = !git pull origin master && git remote prune origin && git submodule update --init --recursive
+	up = pull --rebase
 	undo = !git reset HEAD~1 --mixed
 	top = !git log --format=format:%an | sort | uniq -c | sort -r | head -n 20
 
@@ -91,6 +114,8 @@
 	patchit-please = "!f() { echo $1.patch | sed s_pull/[0-9]*/commits_commit_ | xargs curl -L | git am -3 --whitespace=fix; }; f"
 	# patchit-please = "!f() { curl -L $1.patch | git am -3 --whitespace=fix; }; f"
 
+	# Do not skip worktree
+	# nsw = !git ls-files -v | grep -i ^S | cut -c 3- | tr '\012' '\000' | xargs -0 git update-index --no-skip-worktree
 [apply]
 
 	# Detect whitespace errors when applying a patch
@@ -105,7 +130,7 @@
 	# Treat spaces before tabs and all kinds of trailing whitespace as an error
 	# [default] trailing-space: looks for spaces at the end of a line
 	# [default] space-before-tab: looks for spaces before tabs at the beginning of a line
-	whitespace = space-before-tab,-indent-with-non-tab,trailing-space
+	# whitespace = space-before-tab,-indent-with-non-tab,trailing-space
 
 	# Make `git rebase` safer on OS X
 	# More info: <http://www.git-tower.com/blog/make-git-rebase-safe-on-osx/>
@@ -191,4 +216,4 @@
 	#fetch = +refs/pull/*/head:refs/remotes/origin/pull/*
 
 [commit]
-	gpgsign = true
+	gpgsign = false
