gitconfig: Add Wei Songye's username and email
Signed-off-by: Wei Songye <weisongye@hotmail.com>

--- a/.gitconfig
+++ b/.gitconfig
@@ -217,3 +217,11 @@
 
 [commit]
 	gpgsign = false
+
+
+[user]
+        name = Wei Songye
+        email = weisongye@hotmail.com
+[github]
+        user = weisongye
+
